--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,5 +30,8 @@ jobs:
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
+    - name: Create tables
+      run: mysql -u root -p password test < ./../../agile_test.sql
+
     - name: Run test suite
       run: composer run-script test-github
