--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "license": "proprietary",
     "scripts": {
         "test-locale": "./vendor/bin/phpunit -c phpunit-locale.xml ./tests",
-        "test-github": "./vendor/bin/phpunit -c phpunit-github.xml"
+        "test-github": "./vendor/bin/phpunit -c phpunit-github.xml",
+        "migrate-test": "php ./migrate-testing.php"
     },
     "config": {
         "platform": {
